Add swagger comments, changes in maste groups, drawio schemas
